added some styling and more text

--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+h1 {
+    color: white;
+    text-align: center;
+    padding:70px;
+}
+
 body {
-    background: rgb(121, 235, 235);
+    background: rgb(118, 121, 121);
+}
+
+p {
+    color: white;
+    text-align: center;
+    padding: 70px;
 }
