--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     background: rgb(118, 121, 121);
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
 p {
     color: white;
     text-align: center;
